<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.RecoveryPasswordActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_back"
        app:iconSize="24dp"
        app:iconTint="@color/myGray"
        app:layout_constraintBottom_toBottomOf="@id/title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_txt" />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/rp_title_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/comic_neue_light"
        android:text="@string/rp_subtitle_txt"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_txt" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/login_email_txt"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_txt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_til"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recovery_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/rp_receive_code_btn_txt"
        android:textAllCaps="false"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_til" />

</androidx.constraintlayout.widget.ConstraintLayout>