<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:paddingStart="1dp"
        android:paddingEnd="1dp"
        app:icon="@drawable/ic_moon"
        app:iconSize="30dp"
        app:iconTint="@color/myGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/infnet_logo"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/infnet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/comic_neue_light"
        android:text="@string/main_subtitle_txt"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infnet_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="200dp"
        android:elevation="10dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/login_login_btn_txt"
        android:textAllCaps="false"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_txt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/login_create_account_btn_txt"
        android:textAllCaps="false"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>